fix(report): resolve all PR review issues for UC-OWN-10
- fix: replace JPQL string literals with enum constants (BUG-01/RULE-01)
- fix: add amount > 0 filter to exclude refund transactions (BUG-03)
- fix: unify totalBookings source to Payment table (BUG-02)
- fix: use .doubleValue() for occupancy precision (BUG-04)
- fix: return N/A trend when no previous baseline (BUG-05)
- feat: add date range validation 365-day limit (RULE-05)
- feat: add full Swagger annotations to ReportController (RULE-04)
- feat: add year filter and stadium dropdown to frontend
- feat: implement functional custom date range picker
- fix: replace error: any with unknown, remove console.error
- perf: wrap chartData and summaryCards in useMemo